--- a/TODO
+++ b/TODO
@@ -2,6 +2,14 @@
 
 X = for next release
 
+	* doc: add areas -L, LimitMsgSize, #define DO_HAVE_SYSEXITS_H
+
+	* ftnpack: special option to process ffx control and data
+	  files.
+
+	* doc: add RFC header in Fido message body documentation
+	  (From, To, Cc, ...)
+
 	* doc: add X-Flags documentation.
 
 	* ftn2rfc: improve processing of RFC address user%do.main and
@@ -30,17 +38,17 @@ STARTED.* DOS/OS2: use \ for path names when running commands via system()
 DONE.	* ftn2rfc:702: config option, instead of @FQDN, add @addr_to.addr
 	  (domain part of recipient's FTN address).
 
-	* rfc2ftn: limit max. message size
+DONE.	* rfc2ftn: limit max. message size
 
-	* areas: option -M MAXSIZE, limit maximum RFC message size to
-	  MAXSIZE bytes, larger messages won't be gated.
+DONE.	* areas: option -M MAXSIZE, limit maximum RFC message size to
+(-L)	  MAXSIZE bytes, larger messages won't be gated.
 
 	* ftnaf: marker in areas.bbs to show if an area is subscribed
 	  at the uplink (option or using directory), regularly check
 	  if area is subscribed by any downlink and send add/del
 	  request to uplink.
 
-	* Replace calls to strncpy0/strncat0 with str_copy/str_append.
+STARTED.* Replace calls to strncpy0/strncat0 with str_copy/str_append.
 
 	* "include" for reading routing/packing config file.
 
