--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,19 @@ Sun Mar 30 16:45:38 1997  Martin Junius  <mj@fido.de>
 
 	------- CVS ci -------------------------------------------------------
 
+	* src/toss/ftntoss.c (main): for statistics, the minimum time is
+	  1s for the tosser run to avoid division by 0 errors.
+
+	* src/util/pktdebug.c (main): implemented new -s --short
+	  option. The new short format display only the filename, the
+	  packet sender/recipient, and the number of NetMail/EchoMail
+	  messages in the packet.
+
+	* test/tc.boss/run: new test case, boss node tosser processing
+	  EchoMail from/to points.
+
+	------- CVS ci -------------------------------------------------------
+
 	* examples/README: added new example dirs.
 
 	* examples/namib.north.de: same.
