--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Thu Apr 10 20:52:03 1997  Martin Junius  <mj@fido.de>
+
+	======= Release 4.2.0 ================================================
+
+	* Intermediate release for installing at morannon.fido.de, not
+	  entirely suitable for public release.
+
+	------- CVS ci, tag R420 ---------------------------------------------
+
 Sun Mar 30 16:45:38 1997  Martin Junius  <mj@fido.de>
 
 	------- CVS ci -------------------------------------------------------
